# AAudioTrack

./: .gitmodules  README.md  make_copy_SDK_to_project.sh  settings.gradle
AAudioTrack/: build.gradle
AAudioTrack/src/main/: AndroidManifest.xml
AAudioTrack/src/main/cpp/: AAudioTrack.cpp  CMakeLists.txt
AAudioTrack/src/main/cpp/AAudioEngine/: AAudioEngine.cpp  AAudioEngine.h  AAudioMixer.cpp  AAudioMixer.h
AAudioTrack2/: build.gradle
AAudioTrack2/VstSystem/VstCore/: build.gradle
AAudioTrack2/VstSystem/VstCore/src/main/: AndroidManifest.xml
AAudioTrack2/VstSystem/VstManager/: build.gradle
AAudioTrack2/VstSystem/VstManager/src/main/: AndroidManifest.xml
AAudioTrack2/VstSystem/libOverview/src/main/: AndroidManifest.xml
AAudioTrack2/VstSystem/src/main/: AndroidManifest.xml
AAudioTrack2/src/main/: AndroidManifest.xml
AAudioTrack2/src/main/cpp/: AAudioTrack.cpp  CMakeLists.txt
AAudioTrack2/src/main/cpp/ardour/: TempStuff.cpp  ardour.h
AAudioTrack2/src/main/cpp/ardour/AudioEngine/: AudioBackend.cpp  AudioBackend.h  AudioEngine.cpp  AudioEngine.h  PortUtils.h  Session.cpp  Session.h  typedefs.h
AAudioTrack2/src/main/cpp/ardour/AudioEngine/PortEngine/: port_engine.h  port_manager.h
AAudioTrack2/src/main/cpp/ardour/Backends/: AAudio.cpp  AAudio.h  PortUtils2.h
AAudioTrack2/src/main/cpp/ardour/pdb/: compose.h  convert.h  failed_constructor.h  i18n.h
AAudioTrack2/src/main/cpp/other/: JniHelpers.cpp  JniHelpers.h  log.h
AAudioTrack2/src/main/cpp/ringbuffer/: ringbuffer.hpp
AAudioTrack2/src/main/cpp/smallville7123/: Channel.h  Channel_Effect.h  Channel_Generator.h  HostInfo.h  MidiMap.cpp  MidiMap.h  Mixer.h  Pattern.h  PatternGroup.h  PatternList.h  PianoRoll.h  Plugin.h  Plugin_Base.h  Plugin_Type_Effect.h  Plugin_Type_Generator.h  Plugin_Type_Mixer.h  PortUtils2.h  Rack.h  Sampler.h  TempoGrid.cpp  TempoGrid.h  Track.h  TrackGroup.h  TrackList.h
AAudioTrack2/src/main/cpp/smallville7123/plugins/: ChannelRack.h  Delay.h  DelayLine.h  EffectRack.h  Mixer.h  Playlist.h  Sampler.h
AAudioTrack2/src/main/cpp/soapySDR/: ConverterPrimitives.h
AAudioTrack2/src/main/cpp/zrythm/: engine.cpp  engine.h
AAudioTrack2/src/main/cpp/zrythm/audio/: Track.cpp  Track.h  channel.cpp  channel.h  port.cpp  port.h  port_identifier.cpp  port_identifier.h  track_processor.cpp  track_processor.h
AAudioTrack2/src/main/cpp/zrythm/utils/: string.cpp  string.h
AAudioTrack2/src/main/res/drawable/: meter.xml  toggle_playback.xml
AAudioTrack2/src/main/res/layout/: fileview_content.xml  fileview_depth_content.xml  fileview_filter_content.xml  fileview_filter_content_permissions_group.xml  fileview_filter_icon.xml  fileview_row.xml  spinnerview.xml  windows_context_menu_item.xml  windows_context_menu_sub_menu.xml
AAudioTrack2/src/main/res/values/: attrs.xml  attrs_expandable_view.xml  attrs_flexible.xml  attrs_spinner_view.xml  colors.xml  sequencer_attrs.xml  strings.xml
AAudioTrack_Application/: build.gradle
AAudioTrack_Application/src/main/: AndroidManifest.xml
AAudioTrack_Application/src/main/res/drawable/: color_green.xml  cpu.xml  orange_out_line.xml  toggle_widget_background.xml
AAudioTrack_Application/src/main/res/layout/: main_activity.xml  sequencer.xml
AAudioTrack_Application/src/main/res/values/: colors.xml  strings.xml
AAudioTrack_Application/src/main/res/values-night/: themes.xml
AndroidDAW_SDK__Log/src/main/: AndroidManifest.xml
AndroidDAW_SDK__Log/src/main/cpp/: CMakeLists.txt
AndroidDAW_SDK__MIDI/: build.gradle
AndroidDAW_SDK__MIDI/src/main/: AndroidManifest.xml
AndroidDAW_SDK__MIDI/src/main/cpp/: CMakeLists.txt  empty.cpp
AndroidDAW_SDK__MIDI/src/main/cpp/midifile/: CMakeLists.txt
AndroidDAW_SDK__MIDI/src/main/cpp/src/: Binasc.cpp  MidiEvent.cpp  MidiEventList.cpp  MidiFile.cpp  MidiMessage.cpp  Options.cpp
AndroidDAW_SDK__Plugin/: build.gradle
AndroidDAW_SDK__Plugin/VstSystem/: build.gradle
AndroidDAW_SDK__Plugin/VstSystem/Taggable/: build.gradle
AndroidDAW_SDK__Plugin/VstSystem/VstCore/: build.gradle
AndroidDAW_SDK__Plugin/VstSystem/VstCore/src/main/: AndroidManifest.xml
AndroidDAW_SDK__Plugin/VstSystem/VstManager/: build.gradle
AndroidDAW_SDK__Plugin/src/main/: AndroidManifest.xml
AndroidDAW_SDK__Plugin/src/main/cpp/: CMakeLists.txt  TempoGrid.cpp
AndroidDAW_SDK__Plugin/src/main/cpp/include/AndroidDAW_SDK/plugin/: HostInfo.h  Plugin.h  Plugin_Base.h  Plugin_Type_Effect.h  Plugin_Type_Generator.h  Plugin_Type_Mixer.h  PortUtils2.h  TempoGrid.h  typedefs.h
AndroidDAW_SDK__Plugin/src/main/cpp/include/AndroidDAW_SDK/plugin-host/: Host.h
AndroidDAW_SDK__RingBuffer/: build.gradle
AndroidDAW_SDK__RingBuffer/src/main/: AndroidManifest.xml
OboeTrack/src/main/: AndroidManifest.xml
OboeTrack/src/main/cpp/: CMakeLists.txt  OboeTrack.cpp
OboeTrack/src/main/cpp/AudioEngine/audio/: SoundRecording.cpp
OboeTrack/src/main/cpp/OboeAudioEngine/: OboeAudioEngine.cpp  OboeAudioEngine.h  OboeMixer.cpp  OboeMixer.h
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: toggle_state_off.xml  toggle_state_on.xml
app/src/main/res/layout/: activity_main.xml  sequencer.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
audioplayer/: build.gradle
audioplayer/src/main/: AndroidManifest.xml
audioplayer/src/main/cpp/: CMakeLists.txt  native-lib.cpp
audioplayer/src/main/cpp/AndroidDAW_SDK_CMAKE_HELPER/: CMakeLists.txt
audioplayer/src/main/res/layout/: activity_main.xml
fileview/: build.gradle
fileview/src/main/: AndroidManifest.xml
fileview/src/main/res/layout/: activity_main.xml
fileview/src/main/res/values/: strings.xml
flexible/: build.gradle
flexible/src/main/: AndroidManifest.xml
flexible/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
simplesinewave/: build.gradle
simplesinewave/src/main/: AndroidManifest.xml
simplesinewave/src/main/cpp/: CMakeLists.txt  native-lib.cpp
simplesinewave/src/main/res/layout/: activity_main.xml
simplesinewave/src/main/res/values/: strings.xml
(+153 files in other folders)
